@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: estimate.trm,v 1.8 2009/03/26 00:49:20 sfeam Exp $
+ * $Id: estimate.trm,v 1.8.2.1 2010/05/21 04:56:30 sfeam Exp $
  *
  */
 
@@ -43,6 +43,9 @@ static int ENHest_overprint = 0;
 static TBOOLEAN ENHest_widthflag = TRUE;
 #define ENHest_font ""
 static double ENHest_base;
+
+/* Internal routines for UTF-8 support */
+static size_t strlen_utf8 __PROTO((const char *s));
 
 TERM_PUBLIC void
 ENHest_OPEN(
@@ -123,7 +126,10 @@ ENHest_put_text(unsigned int x, unsigned int y, const char *str)
 
     /* If no enhanced text processing is needed, strlen() is sufficient */
     if (ignore_enhanced_text || !strpbrk(str, "{}^_@&~\n")) {
-	term->xmax = strlen(str);
+	if (encoding == S_ENC_UTF8)
+	    term->xmax = strlen_utf8(str);
+	else
+	    term->xmax = strlen(str);
 	term->ymax = 10;
 	return;
     }
@@ -158,7 +164,37 @@ ENHest_writec(int c)
 	ENHest_x = 0;
     }
 
-    ENHest_fragment_width += ENHest_fontsize;
+    if (encoding == S_ENC_UTF8) {
+	/* Skip all but the first byte of UTF-8 multi-byte characters. */
+	if ((c & 0xc0) != 0x80) {
+	    ENHest_fragment_width += ENHest_fontsize;
+	    /* [most] characters above 0x3000 are square CJK glyphs, */
+	    /* which are wider than western characters.              */
+	    if ((unsigned int)c >= 0xec)
+		ENHest_fragment_width += ENHest_fontsize;
+	}
+    } else
+	ENHest_fragment_width += ENHest_fontsize;
+}
+
+/*
+ * This routine accounts for multi-byte characters in UTF-8.
+ * NB:  It does not return the _number_ of characters in the string, but
+ * rather their approximate _width_ in units of typical character width.
+ * As with the ENHest_writec() routine, it approximates the width of characters
+ * above unicode 0x3000 as being twice that of western alphabetic characters.
+ */
+size_t strlen_utf8(const char *s) {
+    int i = 0, j = 0;
+    while (s[i]) {
+       if ((s[i] & 0xc0) != 0x80) {
+           j++;
+	   if ((unsigned char)(s[i]) >= 0xe3)
+		j++;
+       }
+       i++;
+    }
+    return j;
 }
 
 
